# NiceGUI-Keycloak

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-stack.yml  gen_env.sh  pyproject.toml
app/: main.py
app/pages/: Auth.py  Home.py  Private.py
app/pages/views/: Private.py
app/pkgs/: config.py
