[project]
name = "NiceguiOAuth2"
version = "0.1.0"
requires-python = ">=3.12.10"
dependencies = [
    "authlib>=1.5.0",
    "nicegui[redis]>=2.15.0",
    "pandas>=2.2.0",
    "pyarrow>=19.0.0",
    "requests>=2.32.4",
    "s3fs>=2025.0.0",
]

[tool.ruff]
line-length = 200
exclude = ["**/__init__.py"]